--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,9 @@ services:
     env_file:
       - env
     command: ["start"]
+    networks:
+      - ${SERVICE}_${NETWORK}_${SERVER_TYPE}_net
+
+networks:
+  ${SERVICE}_${NETWORK}_${SERVER_TYPE}_net:
+    driver: bridge
