--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - env
     volumes:
       - $HOME/.${SERVICE}:/root/.${SERVICE}
+      - ./configs/_client.toml:/root/.${SERVICE}/config/config.toml
     networks:
       - net
     deploy:
