--- a/config/_app.toml
+++ b/config/_app.toml
@@ -14,11 +14,11 @@ minimum-gas-prices = "${MIN_GAS_PRICE}"
 # nothing: all historic states will be saved, nothing will be deleted (i.e. archiving node)
 # everything: 2 latest states will be kept; pruning at 10 block intervals.
 # custom: allow pruning options to be manually specified through 'pruning-keep-recent', and 'pruning-interval'
-pruning = "default"
+pruning = "${PRUNING}"
 
 # These are applied if and only if the pruning strategy is custom.
-pruning-keep-recent = "0"
-pruning-interval = "0"
+pruning-keep-recent = "${PRUNING_KEEP_RECENT}"
+pruning-interval = "${PRUNING_INTERVAL}"
 
 # HaltHeight contains a non-zero block height at which a node will gracefully
 # halt and shutdown that can be used to assist upgrades and testing.
