--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     image: "${SERVICE}_${NETWORK}_${VERSION}"
     container_name: "${SERVICE}_${NETWORK}_${SERVER_TYPE}_${VERSION}"
     ports:
-      - $P2P_PORT:$P2P_PORT
+      - $P2P_PORT:26656
+      - $PROMETHEUS_PORT:26660
     env_file:
       - env
     volumes:
